<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="25dp"
            android:text="@string/registration"
            android:textSize="24dp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="5dp"
            android:text="@string/adventure" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="-13dp"
            android:layout_marginRight="30dp"
            android:backgroundTint="#E0E1E4"
            android:gravity="start|top"
            android:inputType="textMultiLine" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/name"
            android:textStyle="bold" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="150dp"
                android:layout_height="30dp"

                android:text="@string/first"
                android:textStyle="bold" />

            <TextView
                android:layout_width="170dp"
                android:layout_height="30dp"
                android:layout_marginStart="-151.5dp"
                android:layout_marginLeft="-151.5dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/border" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:backgroundTint="#E0E1E4"
                android:inputType="text" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginStart="-10dp"
                android:layout_marginLeft="-10dp"


                android:text="@string/last"
                android:textStyle="bold" />

            <TextView
                android:layout_width="170dp"
                android:layout_height="30dp"
                android:layout_marginStart="-155dp"
                android:layout_marginLeft="-155dp"
                android:layout_marginTop="-0dp"
                android:background="@drawable/border" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:backgroundTint="#E0E1E4"
                android:inputType="text" />

        </LinearLayout>




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/gender"

            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:text="@string/male" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="-15dp"
                android:text="@string/female" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/id"
            android:textStyle="bold" />

            <TextView
                android:layout_width="230dp"
                android:layout_height="30dp"
                android:layout_marginStart="150dp"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="-20dp"
                android:background="@drawable/border" />

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/school"
            android:textStyle="bold" />

            <TextView
                android:layout_width="230dp"
                android:layout_height="30dp"
                android:layout_marginStart="150dp"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="-20dp"
                android:background="@drawable/border" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/email"
            android:textStyle="bold" />

            <TextView
                android:layout_width="230dp"
                android:layout_height="30dp"
                android:layout_marginStart="150dp"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="-20dp"
                android:background="@drawable/border" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/phone"

            android:textStyle="bold" />

            <TextView
                android:layout_width="230dp"
                android:layout_height="30dp"
                android:layout_marginStart="150dp"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="-20dp"
                android:background="@drawable/border" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/black"
                android:text="@string/register"/>
        </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"

        android:orientation="vertical">



    </LinearLayout>

</LinearLayout>
